--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
+    "jsonwebtoken": "^7.4.3",
     "knex": "^0.13.0",
     "morgan": "~1.8.1",
     "pg": "^7.2.0",
