--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^7.4.3",
     "knex": "^0.13.0",
     "morgan": "~1.8.1",
+    "parse-jwt": "^1.0.0",
     "pg": "^7.2.0",
     "serve-favicon": "~2.4.2"
   }
